# ckb-system-scripts

./: CMakeLists.txt
c/: big_num.c  ckb_syscalls.h
simulator/: README.md  ckb_syscall_sim.h
